# myEasyLog

./: CMakeLists.txt  LogHelper.cpp  LogHelper.h  README.md  logging.conf  logging_default.conf  main.cpp
easy_log/: CMakeLists.txt  easylogging++.cc
